--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,8 +35,10 @@
     <string name="quick_pulldown_right">Right</string>
     <string name="quick_pulldown_always">Always</string>
 
-    <!-- Quick Settings -->
+    <!-- Quick Advanced -->
     <string name="qs_advanced_title">Advanced</string>
+    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
+    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
 
     <!-- Notification Settings -->
     <string name="notification_settings_title">Notification Settings</string>
