Blissify: Add StatusBar Settings Category - Add Tab for Clock Settings
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,10 @@
     <!-- Blissify -->
     <string name="blissify_title">Blissify</string>
 
+    <!-- Blissify Categories -->
+
+    <!-- Status bar -->
+    <string name="statusbar_settings_title">StatusBar Settings</string>
+    <string name="clock_tab_title">Clock</string>
+
 </resources>
