--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,4 +36,8 @@
     <string name="notification_settings_title">Notification Settings</string>
     <string name="led_settings_title">Led Settings</string>
 
+    <!-- Double tap-to-sleep -->
+    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
+    <string name="double_tap_to_sleep_summary">Double-tap on the status bar or top third and bottom shortcut area of the lock screen to turn off the display</string>
+
 </resources>
