--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -769,4 +769,8 @@
     <string name="hide_lockscreen_date_title">Show lockscreen date</string>
     <string name="hide_lockscreen_alarm_title">Show lockscreen alarm</string>
 
+    <!-- Lockscreen cover art -->
+    <string name="media_art_title">Media cover art</string>
+    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
+
 </resources>
