blissify: Add three-fingers-swipe to screenshot [2/2]
Change-Id: Ie9a6556a0e1065609d0b2bc67dd57c976efd440c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -839,4 +839,8 @@
     <string name="screenshot_sound_title">Screenshot sound</string>
     <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
 
+    <!-- Three-fingers-swipe to screenshot -->
+    <string name="three_finger_gesture">Three finger gesture</string>
+    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
+
 </resources>
