Add option to hide lockscreen alarm text [2/2]
Change-Id: Ia0d73b5852020065e160c553af4b573b3ffa6920

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -767,5 +767,6 @@
     <string name="hide_lockscreen_items_title">Lockscreen items</string>
     <string name="hide_lockscreen_clock_title">Show lockscreen clock</string>
     <string name="hide_lockscreen_date_title">Show lockscreen date</string>
+    <string name="hide_lockscreen_alarm_title">Show lockscreen alarm</string>
 
 </resources>
