--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -246,6 +246,8 @@
     <string name="toast_SlideRightLeft_animation">Slide right to left</string>
 
     <!-- Tile Animation -->
+    <string name="qs_tile_animation_style_title">Tiles animation style</string>
+    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
     <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
     <string name="qs_tile_animation_style_off">No animation</string>
     <string name="qs_tile_animation_style_flip">Flip</string>
