Blissify: Add StatusBar Gestures Tab
Change-Id: I99e4fa42ebb7f9c6c2666e05ec55bb2733ca9b3c
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,7 @@
     <!-- Status bar -->
     <string name="statusbar_settings_title">StatusBar Settings</string>
     <string name="clock_tab_title">Clock</string>
+    <string name="statusbar_gestures_title">Gestures</string>
 
     <!-- clock date options -->
     <string name="clock_title_enable">Alignment</string>
