[SQUASH] Blissify: Add StatusBar Gestures Tab
Change-Id: I99e4fa42ebb7f9c6c2666e05ec55bb2733ca9b3c
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

Blissify: Add Quick Settings Category
- Add Quick Pulldown Tab

Change-Id: I75243ebbc08110ff4b9e7470c10b94860f2e2aa4
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

Blissify: Add QS Advanced Tab

Change-Id: I58eea8714f750f0c04bc9b0359be9fd06f047349
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

Blissify: Add Notification Settings Category
- Add Notification LED Tab

Change-Id: I4188571a7a44863f3aeead3b68a20b85a77a3a79
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,5 +23,17 @@
     <!-- Status bar -->
     <string name="statusbar_settings_title">StatusBar Settings</string>
     <string name="clock_tab_title">Clock</string>
+    <string name="statusbar_gestures_title">Gestures</string>
+
+    <!-- Quick Settings -->
+    <string name="quick_settings_title">Quick Settings</string>
+    <string name="quick_pulldown_title">Quick Pulldown</string>
+
+    <!-- Quick Settings -->
+    <string name="qs_advanced_title">Advanced</string>
+
+    <!-- Notification Settings -->
+    <string name="notification_settings_title">Notification Settings</string>
+    <string name="led_settings_title">Led Settings</string>
 
 </resources>
