Blissify: Add Recents Category
Recents Icon Credit: varund7726

Change-Id: Icafafaaf5aad787130aada87152ef91f140c3976
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -727,4 +727,7 @@
     <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
     <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>
 
+    <!-- Recents Settings -->
+    <string name="recents_settings_title">Recents</string>
+
 </resources>
