--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -323,4 +323,8 @@
     <string name="blur_cat_notice">Notice</string>
     <string name="blur_cat_notice_summary">Blur personlizations are disabled during Keyguard view! Only Translucent Notifications are enabled!</string>
 
+    <!-- Lockscreen Settings -->
+    <string name="lockscreen_settings_title">Lockscreen Settings</string>
+    <string name="lockscreen_gestures_title">Gestures</string>
+
 </resources>
