Blissify: Add Quick Settings Category - Add Quick Pulldown Tab
Change-Id: I75243ebbc08110ff4b9e7470c10b94860f2e2aa4
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -74,4 +74,8 @@
     <string name="network_traffic_hidearrow_title">Hide arrows</string>
     <string name="network_traffic_hidearrow_summary">Hide the traffic monitor activity arrows</string>
 
+    <!-- Quick Settings -->
+    <string name="quick_settings_title">Quick Settings</string>
+    <string name="quick_pulldown_title">Quick Pulldown</string>
+
 </resources>
