--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -84,4 +84,7 @@
     <string name="quick_pulldown_right">Right</string>
     <string name="quick_pulldown_always">Always</string>
 
+    <!-- Quick Settings -->
+    <string name="qs_advanced_title">Advanced</string>
+
 </resources>
