--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -174,6 +174,19 @@
     <string name="reset_color_title">Reset</string>
     <string name="reset_android_title">Android default</string>
     <string name="reset_bliss_title">Bliss default</string>
+    <string name="color_picker_fragment_title">Color Picker</string>
+    <string name="apply_color_title">Apply color</string>
+    <string name="edit_hex_title">HEX value</string>
+    <string name="palette_bliss_title">Bliss</string>
+    <string name="palette_material_title">Material</string>
+    <string name="palette_rgb_title">RGB</string>
+    <string name="reset_theme_default_title">Theme default</string>
+    <string name="favorites_title">Favorites</string>
+    <string name="hide_favorites_title">Hide favorites</string>
+    <string name="show_favorites_title">Show favorites</string>
+    <string name="hide_help_title">Hide help</string>
+    <string name="show_help_title">Show help</string>
+    <string name="empty_title">Empty</string>
 
     <!-- clock date options -->
     <string name="clock_title_enable">Alignment</string>
@@ -495,5 +508,34 @@
     <string name="ticker_font_notoserif_italic">NotoSerif Italic</string>
     <string name="ticker_font_notoserif_bold">NotoSerif Bold</string>
     <string name="ticker_font_notoserif_bold_italic">NotoSerif Bold Italic</string>
+
+    <!-- Color picker help screen -->
+    <string name="color_picker_help_screen_title">Color Picker help</string>
+    <string name="color_picker_help_ab_title">Action bar:</string>
+    <string name="color_picker_help_ab_back_title">Back button:</string>
+    <string name="color_picker_help_ab_back_summary">Close the color picker without applying the new color, (cancel).\nThis has the same effect as clicking the back button on the navigation bar.</string>
+    <string name="color_picker_help_ab_name_title">Title:</string>
+    <string name="color_picker_help_ab_name_summary">Only shows the title, no additional functions</string>
+    <string name="color_picker_help_ab_color_apply_title">Color preview and apply color:</string>
+    <string name="color_picker_help_ab_color_apply_summary">The color preview is always visible.\nIf the new color doesn\'t equals the old color, the color preview will be expanded, to allow apply the new color.</string>
+    <string name="color_picker_help_ab_hex_title">Hex value:</string>
+    <string name="color_picker_help_ab_hex_summary">Shows the hex input field.\nHex values have to be in hex color format:\n\'#aarrggbb\', (\'alpha\' (transparency), \'red\', \'green\' and \'blue\').\nThe back button closes the hex input field without setting the hex value.\nThe apply button sets the hex value as new color without applying the new color.</string>
+    <string name="color_picker_help_ab_menu_title">Menu button:</string>
+    <string name="color_picker_help_ab_menu_reset_title">Reset:</string>
+    <string name="color_picker_help_ab_menu_reset_summary">Resets the new color to the default Android, Bliss or theme related color without applying the new color.</string>
+    <string name="color_picker_help_ab_menu_favorites_title">Show/hide favorites:</string>
+    <string name="color_picker_help_ab_menu_favorites_summary">Shows/hides the favorites.\nHiding the favorites will not reset the favorite colors.</string>
+    <string name="color_picker_help_ab_menu_help_title">Show/hide help:</string>
+    <string name="color_picker_help_ab_menu_help_summary">Shows/hides this help screen.</string>
+    <string name="color_picker_help_colors_title">Colors:</string>
+    <string name="color_picker_help_picker_view_title">Color panel:</string>
+    <string name="color_picker_help_picker_view_summary">Pick a color to set a new color without applying the new color.\nThe color range can be changed using the slider on the right side</string>
+    <string name="color_picker_help_color_buttons_title">Color buttons:</string>
+    <string name="color_picker_help_favorites_title">Favorites:</string>
+    <string name="color_picker_help_favorites_summary">Favorites are empty by default.\nThe new color can be saved as a favorite at any time via long click, (a none empty favorite will be overwritten by the new color).\nA click sets the favorite color as new color, without applying the new color.</string>
+    <string name="color_picker_help_palette_title">Palette:\n(Bliss, Material and RGB)</string>
+    <string name="color_picker_help_palette_summary">All palette colors have a fixed value.\nA click sets the palette color as new color, without applying the new color.</string>
+    <string name="color_picker_help_do_not_show_title">Don\'t show again</string>
+    <string name="color_picker_help_button_ok_title">OK</string>
 
 </resources>
