Blissify: Add Notification Settings Category - Add Notification LED Tab
Change-Id: I4188571a7a44863f3aeead3b68a20b85a77a3a79
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -93,4 +93,8 @@
     <string name="qs_advanced_data_title">Advanced data tile</string>
     <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
 
+    <!-- Notification Settings -->
+    <string name="notification_settings_title">Notification Settings</string>
+    <string name="led_settings_title">Led Settings</string>
+
 </resources>
