--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -88,5 +88,7 @@
     <string name="qs_advanced_title">Advanced</string>
     <string name="quick_settings_vibrate_title">Vibrate on touch</string>
     <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
+    <string name="qs_wifi_easy_toggle_title">WiFi easy toggle</string>
+    <string name="qs_wifi_easy_toggle_summary">Makes it so one click will turn WiFi on or off instead of taking you to settings</string>
 
 </resources>
