Blissify: Add Button Backlight Settings
Zephyr Edits:-
- Adapt it within DU's HWkeys implementation
- Fix hardware buttons backlight timeout
- Fix hardware buttons backlight timeout
- Enable/Disable hardware buttons backlight
- Remove dependency

Change-Id: Id9b3b38d87ce0cf0c8c7733d4f69520b6480def3
Signed-off-by: starkdroid <gamerprince.exp@gmail.com>
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -538,4 +538,16 @@
     <string name="color_picker_help_do_not_show_title">Don\'t show again</string>
     <string name="color_picker_help_button_ok_title">OK</string>
 
+    <!-- Buttons backlight timeout -->
+    <string name="backlight_timeout_title">Buttons backlight timeout</string>
+    <string name="backlight_timeout_on">Enabled always</string>
+    <string name="backlight_timeout_default">5 sec (default)</string>
+    <string name="backlight_timeout_10s">10 sec</string>
+    <string name="backlight_timeout_15s">15 sec</string>
+    <string name="backlight_timeout_20s">20 sec</string>
+    <string name="backlight_timeout_30s">30 sec</string>
+
+    <!-- Enable keys backlight-->
+    <string name="button_brightness_title">Enable backlight</string>
+
 </resources>
