--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,6 +28,12 @@
     <!-- Quick Settings -->
     <string name="quick_settings_title">Quick Settings</string>
     <string name="quick_pulldown_title">Quick Pulldown</string>
+    <string name="quick_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
+    <string name="quick_pulldown_summary_always">Always show Quick Settings on status bar pulldown</string>
+    <string name="quick_pulldown_off">Off</string>
+    <string name="quick_pulldown_left">Left</string>
+    <string name="quick_pulldown_right">Right</string>
+    <string name="quick_pulldown_always">Always</string>
 
     <!-- Quick Settings -->
     <string name="qs_advanced_title">Advanced</string>
