Blissify: Add Quick Settings Pulldown options
PureNexus edits:
*Add Always quick pulldown options

Change-Id: I3de4161644c84795264a1624de0276a5a6014e29
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,5 +77,11 @@
     <!-- Quick Settings -->
     <string name="quick_settings_title">Quick Settings</string>
     <string name="quick_pulldown_title">Quick Pulldown</string>
+    <string name="quick_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
+    <string name="quick_pulldown_summary_always">Always show Quick Settings on status bar pulldown</string>
+    <string name="quick_pulldown_off">Off</string>
+    <string name="quick_pulldown_left">Left</string>
+    <string name="quick_pulldown_right">Right</string>
+    <string name="quick_pulldown_always">Always</string>
 
 </resources>
