QS Advanced: make it customizable by the user [2/2]
Change-Id: Ibe47fb9bedb9b362d89b4d593a1f0ae576611688
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
     <string name="qs_wifi_easy_toggle_title">WiFi easy toggle</string>
     <string name="qs_wifi_easy_toggle_summary">Makes it so one click will turn WiFi on or off instead of taking you to settings</string>
+    <string name="qs_advanced_data_title">Advanced data tile</string>
+    <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
 
     <!-- Notification Settings -->
     <string name="notification_settings_title">Notification Settings</string>
