--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -943,4 +943,7 @@
     <string name="screenshot_delay_title">Screenshot delay</string>
     <string name="screenshot_delay_summary">Adjust the time for when a screenshot is captured</string>
 
+    <string name="qs_fancy_animation_title">Fancy QS animation</string>
+    <string name="qs_fancy_animation_summary">Enable a different animation effect when pulling down the statusbar</string>
+
 </resources>
