--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -133,9 +133,18 @@
     <string name="status_bar_bluetooth_icon_summary">Shows icon when it is enabled but not connected</string>
 
     <!-- Volume key cursor control -->
-    <string name="volbtn_cursor_control_title">Volume buttons control keyboard cursor</string>
+    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
     <string name="volbtn_cursor_control_off">Disabled</string>
     <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
     <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
+
+    <!-- Volume key wake screen -->
+    <string name="volume_wake_screen_title">Wake up device</string>
+    <string name="volume_wake_screen_summary_off">Pressing either volume button will wake your device</string>   
+    <string name="volume_wake_screen_summary_on">This option is disabled when playback control is enabled and music is playing</string>
+
+    <!-- Volume key playback control -->
+    <string name="volbtn_music_controls_title">Playback control</string>
+    <string name="volbtn_music_controls_summary">When the screen is off, long pressing the volume keys will seek music tracks</string>
 
 </resources>
