allow to swap volume buttons rotation based (2/2)
Big thanks to maxwen for original commit and strings

Change-Id: Id4983513a44bf1683a251d6a0891063af0d81815

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -147,4 +147,8 @@
     <string name="volbtn_music_controls_title">Playback control</string>
     <string name="volbtn_music_controls_summary">When the screen is off, long pressing the volume keys will seek music tracks</string>
 
+    <!-- Volume key playback control -->
+    <string name="swap_volume_buttons_title">Reorient</string>
+    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
+
 </resources>
