Toast icon switch [1/2]
Bring it to N.
We already have strings

Change-Id: I59ffd10f20a2ae9491f76380ec9af641e0844928

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -828,4 +828,8 @@
     <string name="qs_columns_title">Columns</string>
     <string name="sysui_qqs_count_title">Small QS tiles</string>
 
+    <!-- Toast Icons -->
+    <string name="toast_icon_title">Toast icon</string>
+    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
+
 </resources>
