--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -164,4 +164,13 @@
     <string name="show_next_alarm_icon_title">Show alarm icon</string>
     <string name="show_next_alarm_icon_summary">Show the alarm icon in the expanded status bar when an alarm is set</string>
 
+    <!-- Quick pull down-->
+    <string name="quick_pulldown_title">Quick pulldown</string>
+    <string name="quick_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
+    <string name="quick_pulldown_summary_always">Always show Quick Settings on status bar pulldown</string>
+    <string name="quick_pulldown_off">Off</string>
+    <string name="quick_pulldown_left">Left</string>
+    <string name="quick_pulldown_right">Right</string>
+    <string name="quick_pulldown_always">Always</string>
+
 </resources>
