--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -131,7 +131,8 @@
     <string name="notification_light_zen_mode">Lights in Do Not Disturb mode</string>
     <string name="notification_light_use_multiple_leds">Multiple LEDs</string>
     <string name="keywords_lights_brightness_level">dim leds brightness</string>
-    <string name="notification_light_automagic">Choose colors automatically</string>
+    <string name="notification_light_automagic">AutoColor</string>
+    <string name="notification_light_automagic_summary">Automatically set a proper color for the led notification if the app has no custom values</string>
     <!-- Lights settings, LED notification -->
     <string name="led_notification_title">Light settings</string>
     <string name="led_notification_text">LED light enabled by settings</string>
