--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -290,5 +290,6 @@
     <!-- Statusbar Bliss logo -->
     <string name="statusbar_bliss_logo">Bliss Logo</string>
     <string name="status_bar_bliss_logo_summary">Enable to show Bliss logo on the left side of statusbar</string>
+    <string name="status_bar_bliss_logo_color">Logo color</string>
 
 </resources>
