Disable/Enable screenshot sound [2/2]
blissify : add in bliss tweaks
Change-Id: I7058ee085770c45f9015232f7f3d7800d01f5f6d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -835,4 +835,8 @@
     <!-- Blissify Tweaks -->
     <string name="advanced_settings_title">Blissify Tweaks</string>
 
+    <!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sound</string>
+    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
+
 </resources>
