--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -826,4 +826,6 @@
     <string name="qs_rows_portrait_title">Rows (portrait)</string>
     <string name="qs_rows_landscape_title">Rows (landscape)</string>
     <string name="qs_columns_title">Columns</string>
+    <string name="sysui_qqs_count_title">Small QS tiles</string>
+
 </resources>
